<resources>
    <string name="app_name">DeloApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- MENU -->
    <string name="menu_sort_by_name">Name</string>
    <string name="menu_sort_by_price">Price</string>


    <!-- SEARCH VIEW -->
    <string name="search_hint">Search...</string>

    <!-- DRAWER -->
    <string name="menu_subheader_men">MEN</string>
    <string name="menu_subheader_women">WOMEN</string>
    <string name="menu_subheader_all">PRODUCTS</string>
    <string name="menu_item_casual">CASUALWEAR</string>
    <string name="menu_item_formal">FORMALWEAR</string>
    <string name="menu_item_foot">FOOTWEAR</string>
    <string name="menu_item_all">ALL PRODUCTS</string>


    <!-- BOTTOM NAVIGATION MENU -->
    <string name="bottom_menu_products">Products</string>
    <string name="bottom_menu_favourites">Favourites</string>
    <string name="bottom_menu_cart">Cart</string>


    <!-- BUTTONS -->
    <string name="btn_add_cart">ADD TO CART</string>
    <string name="btn_remove">REMOVE</string>
    <string name="btn_add_fav">ADD TO FAVOURITE</string>
    <string name="btn_remove_fav">REMOVE FROM FAVOURITE</string>
    <string name="btn_cart_plus">Add</string>
    <string name="btn_cart_rem">Sub</string>
    <string name="btn_cart_delete">REMOVE</string>
    <string name="btn_cart_checkout">CHECKOUT</string>
    <string name="btn_cart_cancel">CANCEL</string>

    <!-- MESSAGES -->
    <string name="message_out_of_stock">OUT OF STOCK</string>
    <string name="message_remove_success">Product has been removed from Favourites!</string>
    <string name="message_add_success">Product has been added to Cart!</string>


    <!-- PRODUCT DETAIL -->
    <string name="stock_label_product">Quantity</string>
    <string name="category_label_product">Category</string>


    <!-- CATEGORIES -->
    <string name="men_footwear">Men\'s Footwear</string>
    <string name="men_casualwear">Men\'s Casualwear</string>
    <string name="men_formalwear">Men\'s Formalwear</string>

    <string name="women_footwear">Women\'s Footwear</string>
    <string name="women_casualwear">Women\'s Casualwear</string>
    <string name="women_formalwear">Women\'s Formalwear</string>

    <string name="all_products"></string>



    <string name="order_total">Order Total</string>
    <string name="cart_array">CART</string>

</resources>
