<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_subheader_men">
        <menu>
            <item
                android:id="@+id/nav_men_footwear"
                android:icon="@drawable/ic_men_foot"
                android:title="@string/menu_item_foot" />
            <item
                android:id="@+id/nav_men_casualwear"
                android:icon="@drawable/ic_men_casual"
                android:title="@string/menu_item_casual" />
            <item
                android:id="@+id/nav_men_formalwear"
                android:icon="@drawable/ic_men_formal"
                android:title="@string/menu_item_formal" />
        </menu>
    </item>

    <item android:title="@string/menu_subheader_women">
        <menu>
            <item
                android:id="@+id/nav_women_footwear"
                android:icon="@drawable/ic_women_foot"
                android:title="@string/menu_item_foot" />
            <item
                android:id="@+id/nav_women_casualwear"
                android:icon="@drawable/ic_women_casual"
                android:title="@string/menu_item_casual" />
            <item
                android:id="@+id/nav_women_formalwear"
                android:icon="@drawable/ic_women_formal"
                android:title="@string/menu_item_formal" />
        </menu>
    </item>

    <item android:title="@string/menu_subheader_all">
        <menu>
            <item
                android:id="@+id/nav_all"
                android:icon="@drawable/list_black"
                android:title="@string/menu_item_all" />
        </menu>
    </item>

</menu>
