<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="100"
        android:title="sort"
        android:visible="true"
        app:showAsAction="always">

        <menu>
            <group>
                <item
                    android:orderInCategory="1"
                    app:showAsAction="never"
                    android:id="@+id/action_sort_by_name"
                    android:title="@string/menu_sort_by_name" />
                <item
                    android:orderInCategory="2"
                    app:showAsAction="never"
                    android:id="@+id/action_sort_by_price"
                    android:title="@string/menu_sort_by_price" />
            </group>
        </menu>
    </item>


</menu>
