<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_item_product"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_product_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProductCart"
            android:layout_width="@dimen/img_cart"
            android:layout_height="@dimen/img_cart"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/tv_product_name_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tv_margin"
            android:layout_marginRight="@dimen/tv_margin"
            android:fontFamily="sans-serif"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:text="Suede Shoes Blue" />

        <LinearLayout
            android:layout_marginTop="@dimen/layout_product_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_old_price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/tv_margin"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/black"
                android:textSize="@dimen/old_price"
                tools:text="£ 47.89" />

            <TextView
                android:id="@+id/tv_new_price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tv_margin"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/new_price"
                tools:text="£ 17.89" />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_remove_product_cart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorFavouriteRed"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/btn_cart_delete"
            android:textColor="@color/colortTextOnGreen"
            android:gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_sub_cart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_cart_rem"
            android:textColor="@color/colortTextOnGreen"
            android:layout_margin="@dimen/btn_margin"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_quantity_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:text="10" />

        <Button
            android:id="@+id/btn_plus_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_cart_plus"
            android:textColor="@color/colortTextOnGreen"
            android:gravity="center"
            android:layout_gravity="center" />

    </LinearLayout>


</LinearLayout>